# trove-classifiers

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: new-trove-classifier.md
.github/workflows/: main.yml  release.yml
_internal/: classifiers.py  exceptions.py  generator.py  models.py
_internal/templates/: __init__.py.jinja2
requirements/: dev.txt
src/trove_classifiers/: __init__.py  __main__.py  version.py
tester/: __init__.py  __main__.py
tests/: test_classifiers.py  test_cli.py  test_tester.py
tests/lib/: __init__.py  __main__.py
trove_classifiers/: __init__.py  __main__.py
